# portfolio

./: .gitignore  README.md
ECS/: CMakeLists.txt  Input.h  README.md  attack_system.h  cleanup.h  collision.h  component_array.h  components.h  destruction_system.h  ecs.h  image.h  main.cpp  movement.h  player.cpp  player_movement.h  projectile_system.h  render_system.cpp  render_system.h  spawner_system.h
ECS/cmake/: fetch_sdl.cmake
ECS/include/: ai.h  attack_system.h  cleanup.h  collision.h  component_array.h  components.h  custom_random.h  destruction_system.h  ecs.h  entity.h  event_system.h  image.h  input.h  movement.h  player.h  player_movement.h  projectile_system.h  render_system.h  spawner_system.h
ECS/src/: main.cpp  player.cpp  render_system.cpp
Euler/: poker.h
Projects/HuffmanImageCompressor/: CMakeLists.txt  main.cpp
Projects/JPEGHuffmanImageCompressor/: CMakeLists.txt  common.h  dct.cpp  huffmannode.h  main.cpp  pixel.h  quantize.cpp
Projects/ObjectTracker/: CMakeLists.txt  main.cpp
Projects/SDLStarter/: CMakeLists.txt  main.cpp
Projects/SimpleImageCompression/: CMakeLists.txt  main.cpp
Projects/ThreadPoolExecutor/: CMakeLists.txt  Source.cpp  TPE.sln  TPE.vcxproj  TPE.vcxproj.filters  TaskResult.h  ThreadPool.h
Projects/ThreadPoolExecutor/include/: Printer.h  TaskResult.h  ThreadPool.h
Projects/ThreadPoolExecutor/src/: main.cpp
SDLStarter/: CMakeLists.txt
football_server/: CMakeLists.txt  README.md
football_server/football_bot_client/: CMakeLists.txt
football_server/football_bot_client/include/client/: SimClient.h
football_server/football_bot_client/src/: SimClient.cpp  main.cpp
football_server/football_core/: CMakeLists.txt
football_server/football_core/include/football/: GameEvent.h  Match.h  Match.tpp  Player.h  Snapshot.h  SnapshotJson.h
football_server/football_core/src/: GameEvent.cpp  Match.cpp  Player.cpp
football_server/football_server/: CMakeLists.txt
football_server/football_server/include/: GameServer.h  Parsing.h  Topics.h  UwsHub.h
football_server/football_server/include/nlohmann/: json.hpp
football_server/football_server/src/: GameServer.cpp  UwsHub.cpp  main.cpp
football_server/football_server_lib/: CMakeLists.txt
football_server/football_server_lib/include/football_server/: EgressStats.h  GameServer.h  IPublisher.h  InBoundQueue.h  Messages.h  OutBoundQueue.h  RedisWriter.h  UwsHub.h
football_server/football_server_lib/include/nlohmann/: json.hpp
football_server/football_server_lib/src/: GameServer.cpp  InBoundQueue.cpp  RedisWriter.cpp  UwsHub.cpp
football_server/football_tests/: CMakeLists.txt
football_server/football_tests/include/: publisher.h
football_server/football_tests/src/: test_disconnect.cpp  test_input_integrity.cpp  test_input_window.cpp  test_process_limit.cpp  test_queue_limits.cpp
